Fix sdkmanager path; robust Android SDK install; build AAB

--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -36,25 +36,35 @@ jobs:
 
           export ANDROID_SDK_ROOT="$HOME/android-sdk"
           export ANDROID_HOME="$ANDROID_SDK_ROOT"
-
           mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
           cd "$ANDROID_SDK_ROOT/cmdline-tools"
 
-          # Download a recent cmdline-tools (16.x)
+          # Download recent cmdline-tools
           curl -L -o tools.zip "https://dl.google.com/android/repository/commandlinetools-linux-12266719_latest.zip"
           unzip -q tools.zip -d latest
           rm -f tools.zip
 
-          export PATH="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH"
+          # Resolve sdkmanager path (Google's zip sometimes nests 'cmdline-tools/')
+          if [ -x "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" ]; then
+            SDKMGR="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager"
+          elif [ -x "$ANDROID_SDK_ROOT/cmdline-tools/latest/cmdline-tools/bin/sdkmanager" ]; then
+            SDKMGR="$ANDROID_SDK_ROOT/cmdline-tools/latest/cmdline-tools/bin/sdkmanager"
+          else
+            echo "sdkmanager not found after unzip" >&2
+            find "$ANDROID_SDK_ROOT/cmdline-tools" -maxdepth 3 -type f -name sdkmanager || true
+            exit 127
+          fi
 
-          yes | sdkmanager --licenses
+          export PATH="$(dirname "$SDKMGR"):$ANDROID_SDK_ROOT/platform-tools:$PATH"
 
-          # Install each package in its own invocation (avoids the multi-line parse issue)
-          sdkmanager "platform-tools"
-          sdkmanager "platforms;android-34"
-          sdkmanager "build-tools;34.0.0"
-          sdkmanager "cmake;3.22.1"
-          sdkmanager "ndk;27.0.12077973"
+          yes | "$SDKMGR" --licenses
+
+          # Install each package in its own call (avoids multi-line parse bug)
+          "$SDKMGR" "platform-tools"
+          "$SDKMGR" "platforms;android-34"
+          "$SDKMGR" "build-tools;34.0.0"
+          "$SDKMGR" "cmake;3.22.1"
+          "$SDKMGR" "ndk;27.0.12077973"
 
       - name: Restore keystore from secret
         shell: bash
@@ -67,8 +77,6 @@ jobs:
       - name: Build signed AAB
         shell: bash
         env:
-          ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
-          ANDROID_HOME: ${{ env.ANDROID_SDK_ROOT }}
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
