--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,7 +1,11 @@
-org.gradle.jvmargs=-Xmx768m -XX:MaxMetaspaceSize=384m -Dfile.encoding=UTF-8
-org.gradle.workers.max=1
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
 org.gradle.daemon=false
+org.gradle.workers.max=2
+org.gradle.caching=true
+
 android.useAndroidX=true
 android.enableJetifier=false
-org.gradle.unsafe.configuration-cache=false
-kotlin.daemon.jvmargs=-Xmx512m -XX:MaxMetaspaceSize=384m
+
+# Kotlin: avoid flaky external daemon
+kotlin.compiler.execution.strategy=in-process
+kotlin.daemon.enabled=false
