--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -88,34 +88,21 @@ jobs:
           set -euxo pipefail
           echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT" >> "$GITHUB_ENV"
           echo "ANDROID_HOME=$ANDROID_HOME" >> "$GITHUB_ENV"
-
+          echo "ANDROID_NDK_ROOT=$ANDROID_SDK_ROOT/ndk/27.0.12077973" >> "$GITHUB_ENV"
           mkdir -p android
-          printf "sdk.dir=%s\n" "$ANDROID_SDK_ROOT" > android/local.properties
-          echo "local.properties:"
-          cat android/local.properties
-
+          {
+            echo "sdk.dir=$ANDROID_SDK_ROOT"
+            echo "ndk.dir=$ANDROID_SDK_ROOT/ndk/27.0.12077973"
+          } > android/local.properties
+          echo "local.properties:" && cat android/local.properties
           # Quick sanity checks
+          which sdkmanager || true
           sdkmanager --version || true
-          ls -la "$ANDROID_SDK_ROOT"
+          ls -la "$ANDROID_SDK_ROOT/ndk" || true
+          ls -la "$ANDROID_SDK_ROOT/ndk/27.0.12077973/toolchains/llvm/prebuilt" || true
 
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: stable
-          cache: true
-
-      - name: Flutter pub get
-        run: flutter pub get
-
-      - name: Decode keystore from secrets
-        shell: bash
-        env:
-          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
-        run: |
-          set -euxo pipefail
-          test -n "$KEYSTORE_BASE64"
-          echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-keystore.jks
-          ls -lh android/app/release-keystore.jks
+      - name: Flutter doctor
+        run: flutter doctor -v
 
       - name: Build AAB (release)
         shell: bash
@@ -125,10 +112,9 @@ jobs:
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: |
           set -euxo pipefail
-          # Ensure Gradle daemons are not lingering
-          ./android/gradlew --stop || true
-          # Build with Flutter (this will invoke Gradle with our gradle.properties)
+          # No need to stop Gradle daemon explicitly; we disabled it in gradle.properties
           flutter build appbundle --release --no-shrink --no-tree-shake-icons
+
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
