--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -12,15 +12,15 @@ on:
 
 jobs:
   build-aab:
-    name: Build AAB (release)
     runs-on: ubuntu-latest
-    timeout-minutes: 120
+    timeout-minutes: 60
 
     env:
-      ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
-      ANDROID_HOME: ${{ github.workspace }}/android-sdk
-      JAVA_TOOL_OPTIONS: -Xmx2g -XX:MaxMetaspaceSize=512m
-      _JAVA_OPTIONS: -Xmx2g
+      ANDROID_SDK_ROOT: /home/runner/android-sdk
+      ANDROID_HOME: /home/runner/android-sdk
+      NDK_VERSION: "27.0.12077973"
+      BUILD_TOOLS: "34.0.0"
+      PLATFORM_API: "android-34"
 
     steps:
       - name: Checkout
@@ -35,25 +35,15 @@ jobs:
           java-version: "17"
           cache: gradle
 
-      - name: Cache Gradle dirs
-        uses: actions/cache@v4
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
         with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            gradle-${{ runner.os }}-
+          flutter-version: "3.32.x"
+          channel: "stable"
+          cache: true
 
-      - name: Cache pub (Flutter packages)
-        uses: actions/cache@v4
-        with:
-          path: ~/.pub-cache
-          key: pub-${{ runner.os }}-${{ hashFiles('pubspec.lock') }}
-          restore-keys: |
-            pub-${{ runner.os }}-
-
-      - name: Manual install Android SDK + accept licenses (robust)
+      # Install Android cmdline-tools manually and put them on PATH
+      - name: Install Android cmdline-tools
         shell: bash
         run: |
           set -euxo pipefail
@@ -62,44 +52,46 @@ jobs:
           curl -L -o tools.zip "https://dl.google.com/android/repository/commandlinetools-linux-12266719_latest.zip"
           unzip -q tools.zip -d latest
           rm -f tools.zip
-
-          # sdkmanager lives here after unzip
-          if [[ -x "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" ]]; then
-            SDKMGR="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager"
-          else
-            SDKMGR="$ANDROID_SDK_ROOT/cmdline-tools/latest/cmdline-tools/bin/sdkmanager"
-          fi
+          # Expose sdkmanager & platform-tools for all later steps
           echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin" >> "$GITHUB_PATH"
           echo "$ANDROID_SDK_ROOT/platform-tools" >> "$GITHUB_PATH"
 
-          # Accept licenses non-interactively
-          yes | "$SDKMGR" --sdk_root="$ANDROID_SDK_ROOT" --licenses || true
-
-          # Install packages individually (more reliable on CI)
-          "$SDKMGR" --sdk_root="$ANDROID_SDK_ROOT" "platform-tools"
-          "$SDKMGR" --sdk_root="$ANDROID_SDK_ROOT" "platforms;android-34"
-          "$SDKMGR" --sdk_root="$ANDROID_SDK_ROOT" "build-tools;34.0.0"
-          "$SDKMGR" --sdk_root="$ANDROID_SDK_ROOT" "cmake;3.22.1"
-          "$SDKMGR" --sdk_root="$ANDROID_SDK_ROOT" "ndk;27.0.12077973"
-
-      - name: Persist ANDROID_* env + write local.properties
+      - name: Accept SDK licenses & install packages
         shell: bash
         run: |
           set -euxo pipefail
-          echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT" >> "$GITHUB_ENV"
-          echo "ANDROID_HOME=$ANDROID_HOME" >> "$GITHUB_ENV"
-          echo "ANDROID_NDK_ROOT=$ANDROID_SDK_ROOT/ndk/27.0.12077973" >> "$GITHUB_ENV"
-          mkdir -p android
+          yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses
+          sdkmanager --sdk_root="$ANDROID_SDK_ROOT" \
+            "platform-tools" \
+            "platforms;${PLATFORM_API}" \
+            "build-tools;${BUILD_TOOLS}" \
+            "cmake;3.22.1" \
+            "ndk;${NDK_VERSION}"
+          sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --list || true
+
+      - name: Decode keystore from secret
+        shell: bash
+        env:
+          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+        run: |
+          set -euxo pipefail
+          test -n "$KEYSTORE_BASE64"
+          mkdir -p android/app
+          echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-keystore.jks
+          ls -lh android/app/release-keystore.jks
+
+      - name: Write local.properties (sdk.dir + ndk.dir)
+        shell: bash
+        run: |
+          set -euxo pipefail
           {
             echo "sdk.dir=$ANDROID_SDK_ROOT"
-            echo "ndk.dir=$ANDROID_SDK_ROOT/ndk/27.0.12077973"
+            echo "ndk.dir=$ANDROID_SDK_ROOT/ndk/${NDK_VERSION}"
           } > android/local.properties
-          echo "local.properties:" && cat android/local.properties
-          # Quick sanity checks
-          which sdkmanager || true
-          sdkmanager --version || true
-          ls -la "$ANDROID_SDK_ROOT/ndk" || true
-          ls -la "$ANDROID_SDK_ROOT/ndk/27.0.12077973/toolchains/llvm/prebuilt" || true
+          cat android/local.properties
+
+      - name: Flutter pub get
+        run: flutter pub get
 
       - name: Flutter doctor
         run: flutter doctor -v
@@ -112,11 +104,11 @@ jobs:
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: |
           set -euxo pipefail
-          # No need to stop Gradle daemon explicitly; we disabled it in gradle.properties
           flutter build appbundle --release --no-shrink --no-tree-shake-icons
+          ls -lh build/app/outputs/bundle/release/ || true
 
-
-      - name: Upload artifact
+      - name: Upload AAB artifact
+        if: success()
         uses: actions/upload-artifact@v4
         with:
           name: app-release-aab
