Fix AAB workflow YAML; install SDK/NDK manually; decode keystore; build and upload

--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -10,68 +10,10 @@ on:
       - "pubspec.yaml"
       - ".github/workflows/android-aab.yml"
 
-      - name: Install Android SDK packages (manual)
-        shell: bash
-        run: |
-          set -euxo pipefail
-          export ANDROID_SDK_ROOT="$HOME/android-sdk"
-          export ANDROID_HOME="$ANDROID_SDK_ROOT"
-          mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
-          cd "$ANDROID_SDK_ROOT/cmdline-tools"
-
-          # Download commandline tools
-          curl -L -o tools.zip https://dl.google.com/android/repository/commandlinetools-linux-12266719_latest.zip
-          unzip -q tools.zip -d latest
-          rm -f tools.zip
-
-          # Pick the sdkmanager path
-          if [ -x "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" ]; then
-            SDKMGR="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager"
-          else
-            SDKMGR="$ANDROID_SDK_ROOT/cmdline-tools/latest/cmdline-tools/bin/sdkmanager"
-          fi
-
-          yes y | "$SDKMGR" --sdk_root="$ANDROID_SDK_ROOT" --licenses
-
-          # Install what we need
-          "$SDKMGR" --sdk_root="$ANDROID_SDK_ROOT" \
-            "platform-tools" \
-            "platforms;android-35" \
-            "build-tools;35.0.0" \
-            "cmake;3.22.1" \
-            "ndk;27.0.12077973"
-
-          echo "Installed packages:"
-          "$SDKMGR" --sdk_root="$ANDROID_SDK_ROOT" --list | sed -n '1,120p'
-
-      - name: Write CI local.properties
-        shell: bash
-        run: |
-          set -euxo pipefail
-          echo "sdk.dir=$HOME/android-sdk" > android/local.properties
-          echo "ndk.dir=$HOME/android-sdk/ndk/27.0.12077973" >> android/local.properties
-          # flutter.sdk is optional but harmless; resolves if Flutter is on PATH
-          which flutter >/dev/null 2>&1 && echo "flutter.sdk=$(which flutter | sed 's#/bin/flutter##')" >> android/local.properties || true
-          echo "=== android/local.properties ==="
-          cat android/local.properties
-
-      - name: Build AAB (release)
-        run: |
-          set -euxo pipefail
-          flutter build appbundle --release --no-shrink --no-tree-shake-icons
-
-
 jobs:
   build-aab:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
-
-    env:
-      ANDROID_SDK_ROOT: /home/runner/android-sdk
-      ANDROID_HOME: /home/runner/android-sdk
-      NDK_VERSION: "27.0.12077973"
-      BUILD_TOOLS: "34.0.0"
-      PLATFORM_API: "android-34"
+    timeout-minutes: 90
 
     steps:
       - name: Checkout
@@ -86,104 +28,93 @@ jobs:
           java-version: "17"
           cache: gradle
 
-      - name: Set up Flutter
+      - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.32.x"
-          channel: stable
+          channel: "stable"
+          flutter-version: "3.32.8"
           cache: true
 
-      - name: Install Android cmdline-tools
+      - name: Install Android SDK (manual)
         shell: bash
         run: |
           set -euxo pipefail
+          export ANDROID_SDK_ROOT="$HOME/android-sdk"
+          export ANDROID_HOME="$ANDROID_SDK_ROOT"
           mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
           cd "$ANDROID_SDK_ROOT/cmdline-tools"
-          curl -L -o tools.zip "https://dl.google.com/android/repository/commandlinetools-linux-12266719_latest.zip"
+          curl -L -o tools.zip https://dl.google.com/android/repository/commandlinetools-linux-12266719_latest.zip
           unzip -q tools.zip -d latest
           rm -f tools.zip
 
-      - name: Accept SDK licenses & install packages
-        shell: bash
-        run: |
-          set -euxo pipefail
-
-          if [ -x "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" ]; then
+          if [[ -x "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" ]]; then
             SDKMGR="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager"
-          elif [ -x "$ANDROID_SDK_ROOT/cmdline-tools/latest/cmdline-tools/bin/sdkmanager" ]; then
-            SDKMGR="$ANDROID_SDK_ROOT/cmdline-tools/latest/cmdline-tools/bin/sdkmanager"
           else
-            echo "sdkmanager not found"
-            exit 1
+            SDKMGR="$ANDROID_SDK_ROOT/cmdline-tools/latest/cmdline-tools/bin/sdkmanager"
           fi
 
-          # Required packages
-          pkgs=(
-            "platform-tools"
-            "platforms;${PLATFORM_API}"
-            "build-tools;${BUILD_TOOLS}"
-            "cmake;3.22.1"
-            "ndk;${NDK_VERSION}"
-          )
+          echo y | "$SDKMGR" --sdk_root="$ANDROID_SDK_ROOT" --licenses || true
+          "$SDKMGR" --sdk_root="$ANDROID_SDK_ROOT" \
+            "platform-tools" \
+            "platforms;android-35" \
+            "platforms;android-33" \
+            "build-tools;34.0.0" \
+            "cmake;3.22.1" \
+            "ndk;27.0.12077973"
 
-          for pkg in "${pkgs[@]}"; do
-            echo "Installing $pkg"
-            yes | "$SDKMGR" --sdk_root="$ANDROID_SDK_ROOT" "$pkg" || true
-          done
+          echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT" >> "$GITHUB_ENV"
+          echo "ANDROID_HOME=$ANDROID_SDK_ROOT" >> "$GITHUB_ENV"
+          echo "$ANDROID_SDK_ROOT/platform-tools" >> "$GITHUB_PATH"
+          echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin" >> "$GITHUB_PATH"
+          echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/cmdline-tools/bin" >> "$GITHUB_PATH"
 
-          # Force license acceptance for all
-          yes | "$SDKMGR" --sdk_root="$ANDROID_SDK_ROOT" --licenses || true
-
-      - name: Write local.properties for CI
-        run: |
-          set -eux
-          echo "sdk.dir=$ANDROID_SDK_ROOT" > android/local.properties
-          echo "flutter.sdk=$(which flutter | sed 's#/bin/flutter##')" >> android/local.properties
-          echo "ndk.dir=$ANDROID_SDK_ROOT/ndk/${NDK_VERSION}" >> android/local.properties
-          cat android/local.properties
-
-
-      - name: Decode keystore from secret
-        shell: bash
+      - name: Decode release keystore
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
         run: |
-          set -euxo pipefail
-          test -n "$KEYSTORE_BASE64"
-          mkdir -p android/app
-          echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-keystore.jks
-          ls -lh android/app/release-keystore.jks
+          set -eux
+          cd android/app
+          echo "$KEYSTORE_BASE64" | base64 -d > release-keystore.jks
+          test -s release-keystore.jks
 
-      - name: Write local.properties (sdk.dir + ndk.dir)
-        shell: bash
-        run: |
-          set -euxo pipefail
-          {
-            echo "sdk.dir=$ANDROID_SDK_ROOT"
-            echo "ndk.dir=$ANDROID_SDK_ROOT/ndk/${NDK_VERSION}"
-          } > android/local.properties
-          cat android/local.properties
-
-      - name: Flutter pub get
-        run: flutter pub get
-
-      - name: Flutter doctor
-        run: flutter doctor -v
-
-      - name: Build AAB (release)
-        shell: bash
+      - name: Write key.properties
         env:
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: |
-          set -euxo pipefail
-          flutter build appbundle --release --no-shrink --no-tree-shake-icons
-          ls -lh build/app/outputs/bundle/release/ || true
+          set -eux
+          cat > android/key.properties <<'EOF'
+          storeFile=app/release-keystore.jks
+          storePassword=${KEYSTORE_PASSWORD}
+          keyAlias=${KEY_ALIAS}
+          keyPassword=${KEY_PASSWORD}
+          EOF
+          sed -n '1,20p' android/key.properties
 
-      - name: Upload AAB artifact
-        if: success()
+      - name: Write local.properties
+        run: |
+          set -eux
+          cat > android/local.properties <<'EOF'
+          sdk.dir=${HOME}/android-sdk
+          flutter.sdk=${HOME}/flutter
+          EOF
+          sed -n '1,20p' android/local.properties
+
+      - name: flutter pub get
+        run: flutter pub get
+
+      - name: Build AAB (release)
+        env:
+          ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
+          ANDROID_HOME: ${{ env.ANDROID_HOME }}
+        run: |
+          set -eux
+          flutter build appbundle --release --no-shrink --no-tree-shake-icons
+
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-release-aab
           path: build/app/outputs/bundle/release/app-release.aab
+          if-no-files-found: error
