--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -10,10 +10,18 @@ on:
       - "pubspec.yaml"
       - ".github/workflows/android-aab.yml"
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
-  build-aab:
+  build:
     runs-on: ubuntu-latest
     timeout-minutes: 90
+    env:
+      ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
+      ANDROID_HOME: ${{ github.workspace }}/android-sdk
+      JAVA_HOME: /usr/lib/jvm/temurin-17-jdk-amd64
 
     steps:
       - name: Checkout
@@ -21,120 +29,71 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up JDK 17
+      - name: Set up Java 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: "17"
           cache: gradle
 
-      - name: Install Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: "stable"
-          flutter-version: "3.32.8"
-          cache: true
-
-      - name: Install Android SDK (manual)
-        shell: bash
+      # Install cmdline-tools and expose sdkmanager on PATH
+      - name: Install Android commandline-tools
         run: |
-          set -euxo pipefail
-          export ANDROID_SDK_ROOT="$HOME/android-sdk"
-          export ANDROID_HOME="$ANDROID_SDK_ROOT"
+          set -eux
           mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
           cd "$ANDROID_SDK_ROOT/cmdline-tools"
-          curl -L -o tools.zip https://dl.google.com/android/repository/commandlinetools-linux-12266719_latest.zip
+          curl -sSL -o tools.zip https://dl.google.com/android/repository/commandlinetools-linux-12266719_latest.zip
           unzip -q tools.zip -d latest
           rm -f tools.zip
+          echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/cmdline-tools/bin" >> "$GITHUB_PATH"
 
-          if [[ -x "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" ]]; then
-            SDKMGR="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager"
-          else
-            SDKMGR="$ANDROID_SDK_ROOT/cmdline-tools/latest/cmdline-tools/bin/sdkmanager"
-          fi
+      - name: Accept SDK licenses
+        run: yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses
 
-          echo y | "$SDKMGR" --sdk_root="$ANDROID_SDK_ROOT" --licenses || true
-          "$SDKMGR" --sdk_root="$ANDROID_SDK_ROOT" \
+      - name: Install required SDK packages
+        run: |
+          set -eux
+          sdkmanager --sdk_root="$ANDROID_SDK_ROOT" \
             "platform-tools" \
             "platforms;android-35" \
             "platforms;android-33" \
-            "build-tools;34.0.0" \
+            "build-tools;35.0.0" \
             "cmake;3.22.1" \
             "ndk;27.0.12077973"
-
-          echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT" >> "$GITHUB_ENV"
-          echo "ANDROID_HOME=$ANDROID_SDK_ROOT" >> "$GITHUB_ENV"
           echo "$ANDROID_SDK_ROOT/platform-tools" >> "$GITHUB_PATH"
-          echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin" >> "$GITHUB_PATH"
-          echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/cmdline-tools/bin" >> "$GITHUB_PATH"
 
-      - name: Decode release keystore
+      - name: Decode keystore from secrets
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
         run: |
           set -eux
-          cd android/app
-          echo "$KEYSTORE_BASE64" | base64 -d > release-keystore.jks
-          test -s release-keystore.jks
+          # Create the keystore in the path your build.gradle expects
+          echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-keystore.jks
+          ls -l android/app/release-keystore.jks
 
-      - name: Write key.properties
-        env:
-          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-        run: |
-          set -eux
-          cat > android/key.properties <<'EOF'
-          storeFile=app/release-keystore.jks
-          storePassword=${KEYSTORE_PASSWORD}
-          keyAlias=${KEY_ALIAS}
-          keyPassword=${KEY_PASSWORD}
-          EOF
-          sed -n '1,20p' android/key.properties
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.32.8"
+          channel: "stable"
+          cache: true
 
-      - name: Write local.properties
-        run: |
-          set -eux
-          cat > android/local.properties <<'EOF'
-          sdk.dir=${HOME}/android-sdk
-          flutter.sdk=${HOME}/flutter
-          EOF
-          sed -n '1,20p' android/local.properties
-
-      - name: Show env & paths
-        run: |
-          echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT"
-          echo "ANDROID_HOME=$ANDROID_HOME"
-          which sdkmanager || true
-          which adb || true
-          sdkmanager --version || true
-          ls -la "$ANDROID_SDK_ROOT" || true
-          ls -la "$ANDROID_SDK_ROOT/platform-tools" || true
-
-      - name: Configure Flutter to use the Android SDK
-        run: |
-          set -eux
-          flutter --version
-          flutter config --android-sdk "$ANDROID_SDK_ROOT"
-          flutter doctor -v
+      - name: Doctor (sanity check)
+        run: flutter doctor -v
 
       - name: flutter pub get
-        env:
-          ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
-          ANDROID_HOME: ${{ env.ANDROID_SDK_ROOT }}
-          PATH: ${{ env.PATH }}:${{ env.ANDROID_SDK_ROOT }}/platform-tools:${{ env.ANDROID_SDK_ROOT }}/cmdline-tools/latest/bin:${{ env.ANDROID_SDK_ROOT }}/cmdline-tools/latest/cmdline-tools/bin
         run: flutter pub get
 
       - name: Build AAB (release)
         env:
-          ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
-          ANDROID_HOME: ${{ env.ANDROID_SDK_ROOT }}
-          PATH: ${{ env.PATH }}:${{ env.ANDROID_SDK_ROOT }}/platform-tools:${{ env.ANDROID_SDK_ROOT }}/cmdline-tools/latest/bin:${{ env.ANDROID_SDK_ROOT }}/cmdline-tools/latest/cmdline-tools/bin
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: |
           set -eux
           flutter build appbundle --release --no-shrink --no-tree-shake-icons
 
-      - name: Upload artifact
+      - name: Upload bundle artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-release-aab
