--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -47,8 +47,13 @@ jobs:
           rm -f tools.zip
           echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/cmdline-tools/bin" >> "$GITHUB_PATH"
 
-      - name: Accept SDK licenses
-        run: yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses
+      - name: Accept SDK licenses (non-interactive)
+        run: |
+          # Don't fail the job if `yes` gets a SIGPIPE when sdkmanager finishes.
+          set +e
+          yes y | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses >/dev/null
+          echo "sdkmanager --licenses exit code: $?"
+          set -e
 
       - name: Install required SDK packages
         run: |
